# 2D-GameEngine

./: .gitignore  CMakeLists.txt
include/Engine/: GameEngine.h  GameObject.h
include/Graphics/: GraphicsComponent.h
include/Physics/: PhysicsComponent.h
include/Utils/: utils.h
src/Engine/: GameEngine.cpp
src/Graphics/: GraphicsComponent.cpp
src/Physics/: PhysicsComponent.cpp
